syntax = "proto3";

option csharp_namespace = "GrpcService_Crud";

package greet;

// The greeting service definition.
service EmployeeCRUD {
  rpc SelectAll (Empty) returns (Employees);
  rpc SelectByID (EmployeeFilter) returns (Employee);
  rpc Insert (Employee) returns (Empty);
  rpc Update (Employee) returns (Empty);
  rpc Delete (EmployeeFilter) returns (Empty);
}
message Empty {

}
message Employee {
  int32 employeeID = 1;
  string firstName = 2;
  string lastName = 3;
  string Address = 4;
}


message Employees
{
  repeated Employee items = 1;
}
message EmployeeFilter
{
  int32 employeeID = 1;
}
